fix(styles): Adjust header position in Mentions table for better visibility

--- a/client/src/pages/mentions/styles.scss
+++ b/client/src/pages/mentions/styles.scss
@@ -30,7 +30,7 @@
       padding: 10px;
       thead{
         position: sticky;
-        top: 106px;
+        top: 126px;
         z-index: 1000;
         background-color: #eee;
       }
